--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -2,7 +2,7 @@
 \usepackage[noeledsec,noend,noledgroup,nopenalties,series={A,E},parapparatus]{reledmac}
 \usepackage{reledpar}
 \usepackage{fontspec}
-\usepackage[paperwidth=17.50cm,paperheight=25.50cm,top=1.40cm,inner=1.95cm,outer=1.65cm,bottom=2.50cm]{geometry}
+\usepackage[paperwidth=17.00cm,paperheight=25.00cm,top=1.40cm,inner=1.95cm,outer=1.65cm,bottom=2.50cm]{geometry}
 \usepackage{polyglossia}
 \usepackage[breaklinks=true,hidelinks]{hyperref}
 \usepackage{tikz}
@@ -68,7 +68,7 @@
 \begin{flushright}
 	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACHAMONS L}.
 \end{flushright}
-
+%
 \begin{flushright}
 	Documento compuesto en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEUL ROUQUETTE}.
 \end{flushright}
@@ -79,20 +79,20 @@
 %
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{\fontsize{11}{14}\selectfont PREFACIO}
+\section*{\centering\fontsize{11}{14}\selectfont PREFACIO}
 \addcontentsline{toc}{section}{Prefacio}
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmitió Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:\par
 %
-\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120\tsup{r.}; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par\vspace{5pt}
+\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120\tsup{r.}; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
 %
 Las \textit{Coplas sobre la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.\par
 %
-El título, \textit{Coplas sobre la muerte de su padre}, resulta un tanto arbitrario si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título no es reconstruible, porque todos aquellos indican que está \comillas{tercerizado} y, además, hace referencia a la estructura formal de la composición; y aunque por mayoría se prefiere \comillas{coplas} por lo anteriormente indicado, no resulta sensato sostener que aquel, en sus variantes, es el título propiamente de la \comillas{colección}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal.\par
+El título, \textit{Coplas sobre la muerte de su padre}, resulta un tanto arbitrario si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título no es reconstruible, porque todos aquellos indican el \comillas{tema} o \comillas{motivación} y, además, hace referencia a la estructura formal de la composición; y aunque por mayoría se prefiere \comillas{coplas}, no resulta sensato sostener que aquel, en sus variantes, es el título propiamente de la \comillas{colección}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal.\par
 %
-No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron divididos en cancioneros, a diferencia de otros autores como Luis de Góngora, quien gozó de \comillas{colecciones} de sus textos, construyendo así un auténtico \textit{corpus}, como puede observarse en el \textit{Códice Chacón} [RES/45] en la Biblioteca Nacional de España.\par
+No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron disueltos en cancioneros, a diferencia de otros autores como Luis de Góngora, quien gozó de \comillas{colecciones} con su obra, constituyendo así un auténtico \textit{corpus}, como puede observarse en el \textit{Códice Chacón} en la BNE.\par
 
-\subsection*{\fontsize{11}{14}\selectfont TESTIMONIOS\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
+\subsection*{\centering\fontsize{11}{14}\selectfont TESTIMONIOS\footnoteE{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancionero del s. XV (ca. 1360-1520)} [7 vols.].}}
 \addcontentsline{toc}{subsection}{Testimonios}
 
 \textit{LB3} = \textit{Cancionero de Egerton} [British Library, Eg. 939].
@@ -118,8 +118,10 @@ Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales de
 \textit{83*IM} = \textit{Cancionero de fray Íñigo de Mendoza} [BNE, INC/897].
 %
 Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67\tsup{r.}-70\tsup{r.} contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}>\par
+\relax
+\vfill
 
-\subsection*{\fontsize{11}{14}\selectfont CRITERIOS DE EDICIÓN}
+\subsection*{\centering\fontsize{11}{14}\selectfont CRITERIOS DE EDICIÓN}
 \addcontentsline{toc}{subsection}{Criterios de edición}
 
 Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnoteE{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} --esto es, \textit{EM6} y \textit{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido a partir de lo anteriormente indicado\footnoteE{Para el \textit{stemma} completo \textit{cfr.} \textcite[103]{PérezPriego2017}.}:\par
@@ -155,17 +157,17 @@ Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcit
 		\end{tikzpicture}
 	\end{figure}%
 
-Se utilizó como texto base el testimonio \textit{LB3} por portar este lecciones no contaminadas, conservar el castellano de la época, y por ser cercano a la redacción del texto manriqueño.\par
+Se utilizó como texto base el testimonio \textit{LB3} por portar este lecciones no contaminadas, conservar el castellano de la época, y por ser cercano a la redacción de las coplas.\par
 %
 Criterios de presentación gráfica\footnoteE{Las modificaciones no aplican al aparato de variantes, a excepción de \textit{nn} y las grafías dobles.}:
 %
 \begin{itemize}[label=--]%
 \item \textit{b}-\textit{v} = se conserva la alternancia.
-\item \textit{f} = se mantiene en vocablos como \comillas{fizo} [hizo], \comillas{falló} [halló], \comillas{fijo} [hijo], porque, en general, corresponden a la \textit{f} inicial latina y, por tanto anulan las sinalefas.
+\item \textit{f} = se mantiene en vocablos como \comillas{fizo} [hizo] porque, en general, corresponden a la \textit{f} inicial latina y, por tanto anulan las sinalefas.
 \item \textit{t} = se respeta la grafía en expresiones finalizadas en -\textit{at}, salvo cuando el testimonio exija una modificación por la rima.
 \item \textit{x} = equivale a la fricativa posalveolar sorda, por tanto, se conserva.
 \item \textit{ç} = se respetan en el texto las soluciones que ofrece el testimonio de base.
-\item \textit{i}-\textit{y}-\textit{j} = se regulariza. \textit{i} se coloca para vocales; \textit{y} para la conjunción copulativa y para vocablos cuya grafía final es \textit{y} vocálico [rey]; \textit{j} solo para consonantes.
+\item \textit{i}-\textit{y}-\textit{j} = \textit{i} se coloca para vocales; \textit{y} para la conjunción copulativa y para vocablos cuya grafía final es \textit{y} vocálico [rey]; \textit{j} solo para consonantes.
 \item \textit{g}-\textit{j} = la alternancia se conserva.
 \item \textit{v}-\textit{u} = se coloca \textit{v} cuando es una consonante y \textit{u} cuando es vocal.
 \item \textit{rr}-\textit{ss}-\textit{ff} = se simplifican en \textit{r}, \textit{s} y \textit{f}.
@@ -174,28 +176,26 @@ Criterios de presentación gráfica\footnoteE{Las modificaciones no aplican al a
 \item \textit{⁊} = se interpreta por \textit{e}.%
 \end{itemize}\par
 %
-Se sangran las líneas iniciales de cada sextina para indicar cada copla de la copla mayor.\par
-%
 Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también cuando se adopten lecciones de \textit{HH1} o de algún testimonio impreso.\par
 %
-El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}, quizá la \textit{editio princeps}.\par
+El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y \parencite{Foulché-Delbosc1902}, descartando el orden de \textit{82*JM}.\par
 %
-Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base --correcciones o daños, entre otros-- y plausibles interpretaciones.\par
+Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base y plausibles interpretaciones.\par
 
-\section*{\fontsize{11}{14}\selectfont BIBLIOGRAFÍA}
+\section*{\centering\fontsize{11}{14}\selectfont BIBLIOGRAFÍA}
 \addcontentsline{toc}{section}{Bibliografía}
 \nocite{*}
 \printbibliography[heading=none]
 \newpage
 
-\section*{\raggedleft\fontsize{13}{14}\selectfont TEXTO Y APARATO CRÍTICOS}
+\section*{\centering\fontsize{13}{14}\selectfont TEXTO Y APARATO CRÍTICOS}
 \addcontentsline{toc}{section}{Texto y aparato críticos}
 \newpage
 
-\section*{\fontsize{11}{14.35}\selectfont CONSPECTUS SIGLORUM}
+\section*{\centering\fontsize{11}{14.35}\selectfont CONSPECTUS SIGLORUM}
 \addcontentsline{toc}{section}{Conspectus siglorum}
 
-\subsection*{\fontsize{9.5}{12}\selectfont SIGLA TESTIMONIORUM}
+\subsection*{\centering\fontsize{9.5}{12}\selectfont SIGLA TESTIMONIORUM}
 \addcontentsline{toc}{subsection}{Sigla testimoniorum}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
@@ -207,7 +207,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \item \textit{83*IM} = \textit{Cancionero de fray Íñigo de Mendoza}, 1483?%
 \end{itemize}
 
-\subsection*{\fontsize{9.5}{12}\selectfont SIGLA APPARATI CRITICI}
+\subsection*{\centering\fontsize{9.5}{12}\selectfont SIGLA APPARATI CRITICI}
 \addcontentsline{toc}{subsection}{Sigla apparati critici}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
@@ -354,6 +354,9 @@ en conponer la cativa,\\
 dexándonos la señora\\
 desconpuesta!\par
 \pend
+\vfill
+\relax
+\newpage
 
 \begin{center}
 	[VIII]\footnoteA{[VIII] VII en \textit{86*JM}.}
@@ -408,9 +411,6 @@ que los tiene\textit{n}!\\
 con oficios no devidos\\
 se \edtext{ma\textit{n}tiene\textit{n}}{\Afootnote{sostienen \textit{83*IM}}}.\par
 \pend
-\relax
-\vfill
-\newpage
 
 \begin{center}
 	[XI]\footnoteA{[XI] X en \textit{82*JM}, \textit{86*RL}.}
@@ -501,9 +501,6 @@ vengamos a lo de ayer\\
 que tan bie\textit{n} es olvidado\\
 como aquello.\par
 \pend
-\relax
-\vfill
-\newpage
 
 \begin{center}
 	[XVI]\footnoteA{[XVI] XXVIII en \textit{82*JM}.}
@@ -594,9 +591,6 @@ mas como fuese mortal,\\
 q\textit{ua}ndo más ardía el fuego,\\
 \edtext{echaste}{\Afootnote{cebaste \textit{MN19}}} agua!\par
 \pend
-\relax
-\vfill
-\newpage
 
 \begin{center}
 	[XXI]\footnoteA{[XXI] XXXIII en \textit{82*JM}.}
@@ -633,6 +627,9 @@ y ensalçada;\\
 \edtext{que}{\Afootnote{quando \textit{86*RL}}} estando más ençe\textit{n}dida\\
 fue \edtext{amatada}{\Afootnote{matada \textit{82*JM}}}?\par
 \pend
+\relax
+\vfill
+\newpage
 
 \begin{center}
 	[XXIII]\footnoteA{[XXIII] XXXV en \textit{82*JM}.}
@@ -964,7 +961,7 @@ su memoria.\par
 \relax
 \newpage
 
-\section*{\fontsize{13}{14.35}\selectfont APÉNDICE}
+\section*{\centering\fontsize{11}{14}\selectfont APÉNDICE}
 \addcontentsline{toc}{section}{Apéndice}
 
 Coplas apócrifas o póstumas en la \textit{Glosa Famossisima} de Alonso de Cervantes, ubicadas entre las coplas XXIV y XXV. Texto fijado por \textcite{Foulché-Delbosc1902}.\vspace{5pt}
