--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -30,6 +30,7 @@
 \Xnumberonlyfirstinline
 \Xnumberonlyfirstintwolines
 \parindentX[E]
+\Xnonbreakableafternumber
 \Xsymlinenum{||}
 \Xbeforesymlinenum{-0.6em}
 \Xafterlemmaseparator{0.4em}
