--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQUE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{TeXGyreTermes}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified TeXGyreTermes with a one.oldstyle more high, because is too small, and a TironianEt adapted from GNU FreeSerif.
+\setmainfont{TemporaNovusRomanus}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified Nimbus15 [renamed as TemporaNovusRomanus] with a one.oldstyle more high and a TironianEt sign adapted from GNU FreeSerif.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
@@ -67,11 +67,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACHAMONS L}.
-\end{flushright}
-%
-\begin{flushright}
-	Documento compuesto en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEUL ROUQUETTE}.
+	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACHAMONS L}., y compuesta\\ en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEUL ROUQUETTE}.
 \end{flushright}
 \newpage
 %
@@ -85,7 +81,7 @@
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmitió Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:\par
 %
-\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120\tsup{r.}; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
+\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120\tsup{r.}; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
 %
 Las \textit{Coplas sobre la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.\par
 %
