--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -509,7 +509,7 @@ Los infantes de Aragó\textit{n},\\
 ¿Qué fue de ta\textit{n}to galán?\\
 ¿Qué fue de tanta inve\textit{n}çión\\
 como \edtext{traxiero\textit{n}}{\Afootnote{truxieron \textit{δ}, \textit{MN19}}}?\par
-Las justas y los torneos,\edtext{}{\linenum{|||||189}\Afootnote[nosep]{\hspace*{-0.4em}/190–192 \textit{transp. 86*RL}}}\\
+Las justas y los torneos,\edtext{}{\linenum{|||||189}\Afootnote[nosep]{\hspace*{-0.4em}/190–192 \space\textit{transp. 86*RL}}}\\
 parame\textit{n}tos, bordaduras\\
 y çimeras\\
 ¿fuero\textit{n} sino devaneos?\\
