--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQUE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{TemporaNovusRomanus}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified Nimbus15 [renamed as TemporaNovusRomanus] with a one.oldstyle more high and a TironianEt sign adapted from GNU FreeSerif.
+\setmainfont{Ecdotica}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified Nimbus15 [Times-like, "ztm-Reg" and "ztm-RegIta"] with the TironianEt (U+204A) and OldStyle figures, was combined with IFAO Grec Unicode of Jean-Luc Fournet.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
