--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQUE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{Ecdotica}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified Nimbus15 [Times-like, "ztm-Reg" and "ztm-RegIta"] with the TironianEt (U+204A) and OldStyle figures, was combined with IFAO Grec Unicode of Jean-Luc Fournet.
+\setmainfont{Ecdotica}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified XITS with the TironianEt (U+204A) combinated with IFAO Grec Unicode of Jean-Luc Fournet.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
@@ -31,7 +31,7 @@
 \Xnumberonlyfirstintwolines
 \parindentX[E]
 \Xnonbreakableafternumber
-\Xsymlinenum{||}
+\Xsymlinenum{\char"02016}
 \Xbeforesymlinenum{-0.6em}
 \Xafterlemmaseparator{0.4em}
 \Xbeforelemmaseparator{-0.17em}
