--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -12,7 +12,7 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQUE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
-\setmainfont{Ecdotica}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified XITS with the TironianEt (U+204A) combinated with IFAO Grec Unicode of Jean-Luc Fournet.
+\setmainfont{Ecdotica}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified XITS [with the TironianEt (U+204A) and modified oldstyle figures] combinated with IFAO Grec Unicode of Jean-Luc Fournet.
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 %
@@ -67,7 +67,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACHAMONS L}., y compuesta\\ en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEUL ROUQUETTE}.
+	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACHLEDIUS}, y compuesta\\ en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEUL ROUQUETTE}.
 \end{flushright}
 \newpage
 %
