--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -8,8 +8,8 @@
 \usepackage{tikz}
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \addbibresource{bibliography.bib}
-\title{COPLAS SOBRE LA MUERTE DE SU PADRE}
-\author{\fontsize{14}{11.96}\selectfont JORGE MANRIQUE}
+\title{COPLAS SOBRE LA MVERTE DE SV PADRE}
+\author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
 \setmainfont{Ecdotica}[BoldFont=,Numbers={OldStyle,Proportional}] %Modified XITS [with the TironianEt (U+204A) and modified oldstyle figures] combinated with IFAO Grec Unicode of Jean-Luc Fournet.
@@ -67,7 +67,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACHLEDIUS}, y compuesta\\ en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEUL ROUQUETTE}.
+	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACHLEDIVS}, y compuesta\\ en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEVL ROVQVETTE}.
 \end{flushright}
 \newpage
 %
@@ -189,10 +189,10 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \addcontentsline{toc}{section}{Texto y aparato críticos}
 \newpage
 
-\section*{\centering\fontsize{11}{14.35}\selectfont CONSPECTUS SIGLORUM}
+\section*{\centering\fontsize{11}{14.35}\selectfont CONSPECTVS SIGLORVM}
 \addcontentsline{toc}{section}{Conspectus siglorum}
 
-\subsection*{\centering\fontsize{9.5}{12}\selectfont SIGLA TESTIMONIORUM}
+\subsection*{\centering\fontsize{9.5}{12}\selectfont SIGLA TESTIMONIORVM}
 \addcontentsline{toc}{subsection}{Sigla testimoniorum}
 \vspace*{-2.5pt}
 \begin{itemize}[label=,leftmargin=0.6cm]%
@@ -200,7 +200,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \item \textit{82*JM} = \textit{Vita Christi por Fray Íñigo de Mendoza}, ca. 1480-1484.
 \item \textit{86*RL} = \textit{Cancionero de Ramón de Llavia}, 1488-1490?
 \item \textit{HH1} = \textit{Cancionero de Oñate-Castañeda}, s. XV.
-\item \textit{MN19} = \textit{Cancionero de Pero Guillén de Segovia}, copia del s. XVIII de un MS. del XV.
+\item \textit{MN19} = \textit{Cancionero de Pero Guillén de Segovia}, copia del s. XVIII de un MS. del s. XV.
 \item \textit{83*IM} = \textit{Cancionero de fray Íñigo de Mendoza}, 1483?%
 \end{itemize}
 
