--- a/COPLAS-MANRIQUE-LaTeX.tex
+++ b/COPLAS-MANRIQUE-LaTeX.tex
@@ -67,7 +67,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACHLEDIVS}, y compuesta\\ en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEVL ROVQVETTE}.
+	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRACHLESIVS}, y compuesta\\ en LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEVL ROVQVETTE}.
 \end{flushright}
 \newpage
 %
