--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -67,7 +67,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	Edición preparada por {\fontsize{9}{1}\selectfont IOHANNES BRALESIVS}, y compuesta en\\ LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEVL ROVQVETTE}.
+	Edición preparada por {\fontsize{9}{1}\selectfont JOHANNES BRACLEDIVS} y compuesta en\\ LuaLaTeX con el paquete Reledmac de {\fontsize{9}{11}\selectfont MAÏAEVL ROVQVETTE}.
 \end{flushright}
 \newpage
 %
@@ -1010,5 +1010,4 @@ Coplas apócrifas o póstumas en la \textit{Glosa Famossisima} de Alonso de Cerv
 \relax
 \vfill
 %
-
 \end{document}
