--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -42,7 +42,6 @@
 \Xafterrule{2pt}
 %
 \newcommand{\comillas}[1]{«#1»}
-\newcommand{\tsup}[1]{\textsuperscript{#1}}
 \renewcommand{\thefootnoteA}{}
 %
 \usepackage{tocloft}
@@ -80,7 +79,7 @@
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmitió Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:\par
 %
-\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120\tsup{r.}; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
+\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca de las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteE{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.}\par
 %
 Las \textit{Coplas sobre la muerte de su padre} son una \comillas{colección} de coplas compuestas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} o \comillas{sextina manriqueña} --cuatro octosílabos y dos tetrasílabos con rimas consonantes--, lenguaje llano y culto, y posee erudición histórica, filosófica y teológica.\par
 %
@@ -93,27 +92,27 @@ No se conservaron autógrafos de alguna copla ni testimonios que puedan consider
 
 \textit{LB3} = \textit{Cancionero de Egerton} [British Library, Eg. 939].
 %
-Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15\tsup{r.}-18\tsup{v.} contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18\tsup{v.}, porque el fol. central [primitivo f. 19\tsup{v.}] no se conservó: tras aquel debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>\par
+Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r--18v contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v, porque el fol. central [primitivo f. 19v] no se conservó: tras aquel debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>\par
 
 \textit{82*JM} = \textit{Vita Christi por fray Íñigo de Mendoza} [RBME, 100-II-17].
 %
-Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41\tsup{r.}-44\tsup{v.} contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \textit{editio princeps}. <\url{https://rbme.patrimonionacional.es/s/rbme/item/14443#?xywh=-1601%2C-39%2C4854%2C2165}>\par
+Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41r--44v contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \textit{editio princeps}. <\url{https://rbme.patrimonionacional.es/s/rbme/item/14443#?xywh=-1601%2C-39%2C4854%2C2165}>\par
 
 \textit{86*RL} = \textit{Cancionero de Ramón de Llavia} [BNE, INC/2567].
 %
-Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73\tsup{r.}-76\tsup{r.} contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\textit{n} por ramon dellabia en q\textit{ue} le endereça el presente libro}. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000108057&page=1}>\par
+Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73r--76r contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\textit{n} por ramon dellabia en q\textit{ue} le endereça el presente libro}. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000108057&page=1}>\par
 
 \textit{HH1} = \textit{Cancionero de Oñate-Castañeda} [Harvard Houghton Library, MS. Span. 97].
 %
-Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de cortesana; papel y filigranas ca. 1480-1486; consta de un total de 437 fols.; los ff. 421\tsup{v.}-424\tsup{v.} contienen las coplas I-XXXIV con la rúbrica \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre do\textit{n} rod\textit{rig}o ma\textit{n}riq\textit{ue} su padre}; carece del f. 425; para las cuestión de las variantes adiáforas \textit{conservados}/\textit{olvidados} resulta lacunoso. Edición paleográfica de \textcite{Severin1990}.\par
+Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de cortesana; papel y filigranas ca. 1480-1486; consta de un total de 437 fols.; los ff. 421v--424v contienen las coplas I-XXXIV con la rúbrica \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre do\textit{n} rod\textit{rig}o ma\textit{n}riq\textit{ue} su padre}; carece del f. 425; para las cuestión de las variantes adiáforas \textit{conservados}/\textit{olvidados} resulta lacunoso. Edición paleográfica de \textcite{Severin1990}.\par
 
 \textit{MN19} = \textit{Cancionero de Pero Guillén de Segovia} [BNE, MS/4114].
 %
-Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407\tsup{r.}-418\tsup{v.} contienen las coplas X-XL [acéfalo]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}>\par
+Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407r--418v contienen las coplas X-XL [acéfalo]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}>\par
 
 \textit{83*IM} = \textit{Cancionero de fray Íñigo de Mendoza} [BNE, INC/897].
 %
-Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67\tsup{r.}-70\tsup{r.} contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}>\par
+Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67r--70r contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}>\par
 \relax
 \vfill
 
