--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -92,7 +92,7 @@ No se conservaron autógrafos de alguna copla ni testimonios que puedan consider
 
 \textit{LB3} = \textit{Cancionero de Egerton} [British Library, Eg. 939].
 %
-Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r--18v contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v, porque el fol. central [primitivo f. 19v] no se conservó: tras aquel debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>\par
+Manuscrito en papel con marcas de agua de finales de los 1470 o inicios de los 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r--18v contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\textit{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\textit{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v, porque el fol. central [primitivo f. 19v] no se conservó: tras aquel debía continuar el texto del \textit{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>\par
 
 \textit{82*JM} = \textit{Vita Christi por fray Íñigo de Mendoza} [RBME, 100-II-17].
 %
